# panpsychism-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  USAGE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
dashboard/: README.md  index.html
dashboard/css/: style.css
dashboard/js/: api.js  app.js  charts.js
docs/: API_REFERENCE.md  ARCHITECTURE.md  CLI_REFERENCE.md  GETTING_STARTED.md  PROMPT_LIBRARY.md  USER_GUIDE.md  V2_ORACLE_PLAN.md  V3_MASTERS_PLAN.md  V4_PLAN.md  VERSION_ROADMAP_20_AGENTS.md  config-example.yaml
examples_v4_pending/: README.md
examples_v4_pending/basic-query/: README.md  main.rs
examples_v4_pending/llm-router/: README.md  main.rs
examples_v4_pending/multi-agent/: README.md  main.rs
examples_v4_pending/prompt-library/: README.md  main.rs
examples_v4_pending/rest-api-client/: README.md  main.rs
prompts/: code-review-security.md  database-migration.md  git-commit-ai.md  git-commit-message.md  kubernetes-network-policy.md  oauth2-implementation.md  rust-error-handling.md
prompts/analysis/: code-complexity.yaml  data-analysis.yaml
prompts/business/: project-proposal.yaml  status-report.yaml
prompts/creative/: brainstorming.yaml  naming-convention.yaml
prompts/development/: api-documentation.yaml  error-handling.yaml
prompts/writing/: release-notes.yaml  technical-blog.yaml
src/: adapter.rs  auditor.rs  bus.rs  cache.rs  composer.rs  config.rs  consciousness.rs  constants.rs  contextualizer.rs  corrector.rs  debugger.rs  documenter.rs  enhancer.rs  enricher.rs  error.rs  evaluator.rs  evolver.rs  expander.rs  federator.rs  formatter.rs  gemini.rs  harmonizer.rs  indexer.rs  learner.rs  lib.rs  localizer.rs  main.rs  memory.rs  monitor.rs  orchestrator.rs  personalizer.rs  predictor.rs  privacy.rs  rate_limiter.rs  recommender.rs  recoverer.rs  recovery.rs  refactorer.rs  sanitizer.rs  search.rs  (+9 more)
src/api/: mod.rs  rest.rs  websocket.rs
src/cli/: mod.rs
src/llm/: anthropic.rs  mod.rs  ollama.rs  openai.rs  router.rs
tests/: integration_tests.rs  phase3_tests.rs
(+9 files in other folders)
