[package]
name = "panpsychism"
version = "1.0.0"
edition = "2021"
description = "Artifactual General Intelligence for Human-Thought Transfer"
license = "MIT"
repository = "https://github.com/mrsarac/prompt-library"
homepage = "https://github.com/mrsarac/prompt-library/tree/main/panpsychism"
documentation = "https://github.com/mrsarac/prompt-library/tree/main/panpsychism#readme"
readme = "README.md"
keywords = ["ai", "prompts", "cli", "llm", "agi"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Mustafa Sarac <mustafa@mustafasarac.com>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }
thiserror = "1"
anyhow = "1"
colored = "2"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dirs = "5"
regex = "1"
futures = "0.3"
async-stream = "0.3"
pin-project-lite = "0.2"
rustyline = "15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
lru = "0.16"
smallvec = { version = "1.11", features = ["serde"] }
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"

[dependencies.async-trait]
version = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true

# Examples (temporarily disabled - API compatibility pending)
# See examples_v4_pending/ for Wave 4 examples
# [[example]]
# name = "basic-query"
# path = "examples/basic-query/main.rs"
#
# [[example]]
# name = "multi-agent"
# path = "examples/multi-agent/main.rs"
#
# [[example]]
# name = "prompt-library"
# path = "examples/prompt-library/main.rs"
#
# [[example]]
# name = "llm-router"
# path = "examples/llm-router/main.rs"
#
# [[example]]
# name = "rest-api-client"
# path = "examples/rest-api-client/main.rs"
